# umka

./: .gitignore  LICENSE  Makefile  requirements.txt
.github/workflows/: CI.yml
umka/: Cargo.toml  pyproject.toml
umka/src/: fuzzywuzzy.rs  lib.rs
umka/umka/: __init__.py
umka/umka/fuzz/: fuzz.py
umka/umka/test/fuzz/: test_fuzz.py
